k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noaa-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noaa-api
  template:
    metadata:
      labels:
        app: noaa-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8000"
    spec:
      serviceAccountName: noaa-etl-sa
      containers:
        - name: api
          image: ECR_REGISTRY/noaa-etl-api:IMAGE_TAG
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
