k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noaa-api
spec:
  selector:
    app: noaa-api
  ports:
    - port: 80
      targetPort: 8000
